--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					margin-bottom: 0px;
 				}
 			</style>
-			<div class="chakra-stack css-iq2z85"><a id="logo" href="/">
+			<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
 					<style data-emotion="css 1koujw0">
 						.css-1koujw0 {
 							font-family: EB Garamond;
@@ -182,16 +182,16 @@
 							}
 							</style>
 						<a href="sociology-aslant.html" class="menu-item">
-							<div data-scope="menu" data-part="item" id=":R1adm:/sociology-aslant" role="menuitem"
+							<div data-scope="menu" data-part="item" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="sociology-aslant" class="css-0">sociology aslant</div>
 						</a>
 						<a href="development-aslant.html"  class="menu-item">
-							<div data-scope="menu" data-part="item" id=":R1adm:/development-aslant" role="menuitem"
+							<div data-scope="menu" data-part="item" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="development-aslant" class="css-0">development aslant
 							</div>
 						</a>
 						<a href="ecocriticism-aslant.html"  class="menu-item">
-							<div data-scope="menu" data-part="item" id=":R1adm:/ecocriticism-aslant" role="menuitem"
+							<div data-scope="menu" data-part="item" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="ecocriticism-aslant" class="css-0">ecocriticism aslant
 							</div>
 						</a>
@@ -223,7 +223,7 @@
 			}
 		</style>
 		<div class="banner css-h24h7f"
-			style="background-image:url(/images/background.png);background-position:center;background-size:cover">
+			style="background-image:url(images/background.png);background-position:center;background-size:cover">
 			<style data-emotion="css zrjwwv">
 				.css-zrjwwv {
 					display: -webkit-box;
@@ -323,7 +323,7 @@
 													<tr class="notion-simple-table-row notion-block-1c85650b501b80c7bf89f4679841bc92">
 														<td class="" style="width:590.9872131347656px">
 															<div class="notion-simple-table-cell"><a rel="noopener noreferrer" class="notion-link"
-																	href="/sociology-aslant.html">sociology aslant</a>
+																	href="sociology-aslant.html">sociology aslant</a>
 																<em>(re)reading and (re)writing social relations under duress of the world order</em>
 															</div>
 														</td>
@@ -331,7 +331,7 @@
 													<tr class="notion-simple-table-row notion-block-1c85650b501b80db88bec773e034c936">
 														<td class="" style="width:590.9872131347656px">
 															<div class="notion-simple-table-cell"><a rel="noopener noreferrer" class="notion-link"
-																	href="/development-aslant.html">development aslant</a><a rel="noopener noreferrer"
+																	href="development-aslant.html">development aslant</a><a rel="noopener noreferrer"
 																	class="notion-link" href="https://www.slant school/lectures#development">
 																</a><em>disarming the university: a dialogue</em></div>
 														</td>
@@ -339,7 +339,7 @@
 													<tr class="notion-simple-table-row notion-block-1c85650b501b80edbe1ee745e7da9e7a">
 														<td class="" style="width:590.9872131347656px">
 															<div class="notion-simple-table-cell"><a rel="noopener noreferrer" class="notion-link"
-																	href="/ecocriticism-aslant.html">ecocriticism aslant</a>
+																	href="ecocriticism-aslant.html">ecocriticism aslant</a>
 																<em>contending with place: postcolonial writers and the politics of the town</em>
 															</div>
 														</td>
