--- a/development-aslant.html
+++ b/development-aslant.html
@@ -76,7 +76,7 @@
 					margin-bottom: 0px;
 				}
 			</style>
-			<div class="chakra-stack css-iq2z85"><a id="logo" href="/">
+			<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
 					<style data-emotion="css 1koujw0">
 						.css-1koujw0 {
 							font-family: EB Garamond;
