--- a/ecocriticism-aslant.html
+++ b/ecocriticism-aslant.html
@@ -76,7 +76,7 @@
 					margin-bottom: 0px;
 				}
 			</style>
-			<div class="chakra-stack css-iq2z85"><a id="logo" href="/">
+			<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
 					<style data-emotion="css 1koujw0">
 						.css-1koujw0 {
 							font-family: EB Garamond;
@@ -270,10 +270,10 @@
 								color: var(--orange2);
 							}
 						</style><a value="sociology" class="lecture-tab-nav css-1ipfrcw"
-							href="/sociology-aslant.html">sociology<!-- --> aslant</a><a value="development"
-							class="lecture-tab-nav css-1ipfrcw" href="/development-aslant.html">development<!-- --> aslant</a><a
+							href="sociology-aslant.html">sociology aslant</a><a value="development"
+							class="lecture-tab-nav css-1ipfrcw" href="development-aslant.html">development aslant</a><a
 							value="ecocriticism" class="isActive lecture-tab-nav css-1ipfrcw"
-							href="/ecocriticism-aslant.html">ecocriticism<!-- --> aslant</a>
+							href="ecocriticism-aslant.html">ecocriticism aslant</a>
 					</ul>
 				</div>
 				<style data-emotion="css 4i6wag">
@@ -331,32 +331,15 @@
 							<hr class="notion-hr notion-block-1f65650b501b80a09695c1abd125c667">
 							<div class="notion-blank notion-block-1fa5650b501b80ff8bfdc521c1b417d4"> </div>
 							<div class="notion-blank notion-block-1fa5650b501b8039b8e6cb1d768aa817"> </div>
-							<figure
-								class="notion-asset-wrapper notion-asset-wrapper-video notion-block-1fa5650b501b80019f39eb51b2e67c41">
-								<div
-									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;padding-bottom:56.25%">
-									<link rel="preload" as="image" href="https://i.ytimg.com/vi/8hFbL_YSevo/hqdefault.jpg"
-										imagesrcset="https://i.ytimg.com/vi_webp/8hFbL_YSevo/default.webp 120w, https://i.ytimg.com/vi_webp/8hFbL_YSevo/mqdefault.webp 320w, https://i.ytimg.com/vi_webp/8hFbL_YSevo/hqdefault.webp 480w, https://i.ytimg.com/vi_webp/8hFbL_YSevo/sddefault.webp 640w, https://i.ytimg.com/vi_webp/8hFbL_YSevo/maxresdefault.webp 1280w"
-										imagesizes="(max-width: 120px) 120px, (max-width: 320px) 320px, (max-width: 480px) 480px, (max-width: 640px) 640px, (max-width: 1280px) 1280px">
-									<div class="notion-yt-lite notion-asset-object-fit" style="object-fit:contain">
-										<picture>
-											<source srcset="/images/ecocriticism-aslant/youtube/default.webp 120w"
-												media="(max-width: 120px)" type="image/webp">
-											<source srcset="/images/ecocriticism-aslant/youtube/mqdefault.webp 320w"
-												media="(max-width: 320px)" type="image/webp">
-											<source srcset="/images/ecocriticism-aslant/youtube/hqdefault.webp 480w"
-												media="(max-width: 480px)" type="image/webp">
-											<source srcset="/images/ecocriticism-aslant/youtube/sddefault.webp 640w"
-												media="(max-width: 640px)" type="image/webp">
-											<source srcset="/images/ecocriticism-aslant/youtube/maxresdefault.webp 1280w"
-												media="(max-width: 1280px)" type="image/webp"><img
-												src="/images/ecocriticism-aslant/youtube/hqdefault.jpg" class="notion-yt-thumbnail"
-												alt="Video preview">
-										</picture>
-										<div class="notion-yt-playbtn"></div>
-									</div>
+							<style>
+							.youtube-embed{
+								position:relative;width:100%;height:0;padding-bottom:56.27198%;}
+								.youtube-embed iframe{position:absolute;top:0;left:0;width:100%;height:100%;}
+								</style>
+								<div class="youtube-embed">
+								<iframe width='500' height='294' src="https://www.youtube.com/embed/8hFbL_YSevo"frameborder="0">
+								</iframe>
 								</div>
-							</figure>
 							<div class="notion-blank notion-block-1f75650b501b802f870ac5198956d4fa"> </div>
 							<div class="notion-blank notion-block-1f65650b501b8073801bcd585d31d4d4"> </div>
 							<div class="notion-row notion-block-1f65650b501b80ddb80aca7ccdff5b2e">
@@ -367,7 +350,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13301529.png"
+												src="images/ecocriticism-aslant/img20250427_13301529.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -379,7 +362,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13360703.png"
+												src="images/ecocriticism-aslant/img20250427_13360703.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -393,7 +376,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13325342.png"
+												src="images/ecocriticism-aslant/img20250427_13325342.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -405,7 +388,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13360710.png"
+												src="images/ecocriticism-aslant/img20250427_13360710.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -416,7 +399,7 @@
 								<div
 									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 									<img style="object-fit:cover"
-										src="/images/ecocriticism-aslant/img20250427_13492037.png"
+										src="images/ecocriticism-aslant/img20250427_13492037.png"
 										  loading="lazy" decoding="async"></div>
 							</figure>
 							<div class="notion-row notion-block-1f65650b501b80f09589daff320bb094">
@@ -427,7 +410,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13360704.png"
+												src="images/ecocriticism-aslant/img20250427_13360704.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -439,7 +422,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13360705.png"
+												src="images/ecocriticism-aslant/img20250427_13360705.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -453,7 +436,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13570257.png"
+												src="images/ecocriticism-aslant/img20250427_13570257.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -465,7 +448,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14134967.png"
+												src="images/ecocriticism-aslant/img20250427_14134967.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -476,7 +459,7 @@
 								<div
 									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 									<img style="object-fit:cover"
-										src="/images/ecocriticism-aslant/img20250427_13504379.png"
+										src="images/ecocriticism-aslant/img20250427_13504379.png"
 										  loading="lazy" decoding="async"></div>
 							</figure>
 							<div class="notion-row notion-block-1f65650b501b80ff945df1c1fa7b7c51">
@@ -487,7 +470,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14100002.png"
+												src="images/ecocriticism-aslant/img20250427_14100002.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -499,7 +482,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13554537.png"
+												src="images/ecocriticism-aslant/img20250427_13554537.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -511,7 +494,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14083329.png"
+												src="images/ecocriticism-aslant/img20250427_14083329.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -525,7 +508,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13474390.png"
+												src="images/ecocriticism-aslant/img20250427_13474390.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -537,7 +520,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13542403.png"
+												src="images/ecocriticism-aslant/img20250427_13542403.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -548,7 +531,7 @@
 								<div
 									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 									<img style="object-fit:cover"
-										src="/images/ecocriticism-aslant/img20250427_14152670.png"
+										src="images/ecocriticism-aslant/img20250427_14152670.png"
 										  loading="lazy" decoding="async"></div>
 							</figure>
 							<div class="notion-row notion-block-1f75650b501b808ea309ce83a8b724e4">
@@ -559,7 +542,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14170634.png"
+												src="images/ecocriticism-aslant/img20250427_14170634.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -571,7 +554,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_13595754.png"
+												src="images/ecocriticism-aslant/img20250427_13595754.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -585,7 +568,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14182925.png"
+												src="images/ecocriticism-aslant/img20250427_14182925.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -597,7 +580,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14200258.png"
+												src="images/ecocriticism-aslant/img20250427_14200258.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -611,7 +594,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14211958.png"
+												src="images/ecocriticism-aslant/img20250427_14211958.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -623,7 +606,7 @@
 										<div
 											style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 											<img style="object-fit:cover"
-												src="/images/ecocriticism-aslant/img20250427_14230112.png"
+												src="images/ecocriticism-aslant/img20250427_14230112.png"
 												  loading="lazy" decoding="async"></div>
 									</figure>
 								</div>
@@ -634,7 +617,7 @@
 								<div
 									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;height:100%">
 									<img style="object-fit:cover"
-										src="/images/ecocriticism-aslant/img20250427_14254329.jpg"
+										src="images/ecocriticism-aslant/img20250427_14254329.jpg"
 										  loading="lazy" decoding="async"></div>
 							</figure>
 							<div class="notion-blank notion-block-1fa5650b501b80bc971bd8ce12030643"> </div>
