--- a/sociology-aslant.html
+++ b/sociology-aslant.html
@@ -78,7 +78,7 @@
 					margin-bottom: 0px;
 				}
 			</style>
-			<div class="chakra-stack css-iq2z85"><a id="logo" href="/">
+			<div class="chakra-stack css-iq2z85"><a id="logo" href="index.html">
 					<style data-emotion="css 1koujw0">
 						.css-1koujw0 {
 							font-family: EB Garamond;
@@ -183,16 +183,16 @@
 								color: rgb(193, 106, 34);
 							}
 							</style>
-						<a href="/sociology-aslant.html" class="menu-item">
+						<a href="sociology-aslant.html" class="menu-item">
 							<div data-scope="menu" data-part="item" id=":R1adm:/sociology-aslant" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="sociology-aslant" class="css-0">sociology aslant</div>
 						</a>
-						<a href="/development-aslant.html"  class="menu-item">
+						<a href="development-aslant.html"  class="menu-item">
 							<div data-scope="menu" data-part="item" id=":R1adm:/development-aslant" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="development-aslant" class="css-0">development aslant
 							</div>
 						</a>
-						<a href="/ecocriticism-aslant.html"  class="menu-item">
+						<a href="ecocriticism-aslant.html"  class="menu-item">
 							<div data-scope="menu" data-part="item" id=":R1adm:/ecocriticism-aslant" role="menuitem"
 								data-ownedby="menu::R1adm::content" data-value="ecocriticism-aslant" class="css-0">ecocriticism aslant
 							</div>
@@ -272,10 +272,10 @@
 								color: var(--orange2);
 							}
 						</style><a value="sociology" class="isActive lecture-tab-nav css-1ipfrcw"
-							href="/sociology-aslant.html">sociology<!-- --> aslant</a><a value="development"
-							class="lecture-tab-nav css-1ipfrcw" href="/development-aslant.html">development<!-- --> aslant</a><a
+							href="sociology-aslant.html">sociology aslant</a><a value="development"
+							class="lecture-tab-nav css-1ipfrcw" href="development-aslant.html">development aslant</a><a
 							value="ecocriticism" class="lecture-tab-nav css-1ipfrcw"
-							href="/ecocriticism-aslant.html">ecocriticism<!-- --> aslant</a>
+							href="ecocriticism-aslant.html">ecocriticism aslant</a>
 					</ul>
 				</div>
 				<style data-emotion="css 4i6wag">
@@ -334,32 +334,16 @@
 							<hr class="notion-hr notion-block-1f65650b501b8086bec4d97fe5a0445f">
 							<div class="notion-blank notion-block-1f75650b501b809ebb2fdc215452090d"> </div>
 							<div class="notion-blank notion-block-1f65650b501b8002aa25d1488c2d0df9"> </div>
-							<figure
-								class="notion-asset-wrapper notion-asset-wrapper-video notion-block-1f65650b501b80a6a3a8d41365ecf93c">
-								<div
-									style="position:relative;display:flex;justify-content:center;align-self:center;width:100%;max-width:100%;flex-direction:column;padding-bottom:56.25%">
-									<link rel="preload" as="image" href="https://i.ytimg.com/vi/Q_rB3AsihWQ/hqdefault.jpg"
-										imagesrcset="https://i.ytimg.com/vi_webp/Q_rB3AsihWQ/default.webp 120w, https://i.ytimg.com/vi_webp/Q_rB3AsihWQ/mqdefault.webp 320w, https://i.ytimg.com/vi_webp/Q_rB3AsihWQ/hqdefault.webp 480w, https://i.ytimg.com/vi_webp/Q_rB3AsihWQ/sddefault.webp 640w, https://i.ytimg.com/vi_webp/Q_rB3AsihWQ/maxresdefault.webp 1280w"
-										imagesizes="(max-width: 120px) 120px, (max-width: 320px) 320px, (max-width: 480px) 480px, (max-width: 640px) 640px, (max-width: 1280px) 1280px">
-									<div class="notion-yt-lite notion-asset-object-fit" style="object-fit:contain">
-										<picture>
-											<source srcset=/images/vi_webp/default.webp 120w"
-												media="(max-width: 120px)" type="image/webp">
-											<source srcset=/images/vi_webp/mqdefault.webp 320w"
-												media="(max-width: 320px)" type="image/webp">
-											<source srcset=/images/vi_webp/hqdefault.webp 480w"
-												media="(max-width: 480px)" type="image/webp">
-											<source srcset=/images/vi_webp/sddefault.webp 640w"
-												media="(max-width: 640px)" type="image/webp">
-											<source srcset=/images/vi_webp/maxresdefault.webp 1280w"
-												media="(max-width: 1280px)" type="image/webp"><img
-												src="../../../i.ytimg.com/vi/Q_rB3AsihWQ/hqdefault.jpg" class="notion-yt-thumbnail"
-												alt="Video preview">
-										</picture>
-										<div class="notion-yt-playbtn"></div>
-									</div>
+					<style>
+							.youtube-embed{
+								position:relative;width:100%;height:0;padding-bottom:56.27198%;}
+								.youtube-embed iframe{position:absolute;top:0;left:0;width:100%;height:100%;}
+								</style>
+								<div class="youtube-embed">
+								<iframe width='500' height='294' src="
+								https://www.youtube.com/embed/Q_rB3AsihWQ?si=VioOqBmqTSYFDnw0"frameborder="0">
+								</iframe>
 								</div>
-							</figure>
 							<div class="notion-blank notion-block-1f65650b501b80d4bb32e25b75897abc"> </div>
 							<div class="notion-blank notion-block-1f65650b501b8007a5d4ef223f46f281"> </div>
 							<div class="notion-text notion-block-1f65650b501b80239063fb13b522b611"><b>1.</b></div>
